[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "plotly>=6.2.0",
    "praw>=7.8.1",
    "prophet>=1.1.7",
    "requests>=2.32.4",
    "scikit-learn>=1.7.0",
    "scipy>=1.16.0",
    "statsmodels>=0.14.4",
    "streamlit>=1.46.1",
    "tensorflow>=2.14.0",
    "textblob>=0.19.0",
    "trafilatura>=2.0.0",
    "tweepy>=4.16.0",
    "vadersentiment>=3.3.2",
    "yfinance>=0.2.64",
]
