[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "plotly>=5.0.0",
    "praw>=7.0.0",
    "prophet>=1.0.0",
    "requests>=2.25.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.7.0",
    "statsmodels>=0.12.0",
    "streamlit>=1.28.0",
    "textblob>=0.17.0",
    "trafilatura>=1.6.0",
    "tweepy>=4.0.0",
    "vadersentiment>=3.3.0",
    "yfinance>=0.1.70",
]
